<resources>
    <string name="app_name">Cool Weather APP</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="edit_latitude">Latitude</string>
    <string name="edit_longitude">Longitude</string>
    <string name="hint_latitude">Especificar latitude (ex.: 38.69)</string>
    <string name="hint_longitude">Especificar ongitude (ex.: -9.29)</string>
    <string name="sea_level">Sea Level Pressure:</string>
    <string name="wind_dir">Wind Direction:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="temperature">Temperature:</string>
    <string name="text_time">Time:</string>
    <string name="upd_button">Update</string>
</resources>